# MeanFilter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  filter.hpp  main.cpp  queue.hpp
test/: CMakeLists.txt  main_test.cc  queue_test.cc
